syntax = "proto3";

option go_package = "git.samberi.com/dois/delivery_api/proto/gen";

package common;

message EmptyRequest {}

message SimpleMessage {
    bool success = 1;
}

message LoginRequest {
    message Body {
        string username = 1;
        string password = 2;
    }
    Body body = 1;
}

message RequestTwoFactAuthMessage {
    message Body {
        string phone = 1;
    }
    Body body = 1;
}

message ConfirmTwoFactAuthMessage {
    message Body {
        string phone = 1;
        string password = 2;
    }
    Body body = 1;
}

message CustomerMessage {
    string UID = 1;
    string email = 2;
    string phone = 3;
    string address = 4;
    string fullName = 5;
}

message ProductMessage {
    string UID = 1;
    string name = 3;
    int32 count = 4;
    double ratio = 5;
    string measure = 6;
    bool isWeight = 7;
    double quantity = 8;
    double price = 9;
    double fullPrice = 10;
    double discountPrice = 11;
    int32 selectedStatus = 12;
    repeated string replacementsUID = 13;
    bool replacementStatus = 15;
}

message UserMessage {
    string UID = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string phone = 5;
    bool active = 6;
    bool isSuperUser = 7;
    repeated int64 userTypes = 8;
    string token = 9;
}

message OrderMessage {
    string UID = 1;
    string deliverymanUID = 2;
    CustomerMessage customer = 3;
    repeated ProductMessage products = 4;
    string address = 5;
    double latitude = 6;
    double longitude = 7;
    int32 status = 8;
    double originalSum = 9;
    double confirmSum = 10;
}

message PaginateMessage {
    int32 countPage = 1;
    int32 length = 2;
    int32 currentPage = 3;
    int32 count = 4;
}

message PaginateRequest {
    int32 pageSize = 1;
    int32 page = 2;
}
